--- a/slider.html
+++ b/slider.html
@@ -98,13 +98,49 @@
   </head>
 
   <body>
-    <div id="my-keen-slider" class="keen-slider ">
-      <div class="keen-slider__slide number-slide1">1</div>
-      <div class="keen-slider__slide number-slide2">2</div>
-      <div class="keen-slider__slide number-slide3">3</div>
-      <div class="keen-slider__slide number-slide4">4</div>
-      <div class="keen-slider__slide number-slide5">5</div>
-      <div class="keen-slider__slide number-slide6">6</div>
+    <div id="my-keen-slider" class="keen-slider">
+      <img
+        class="keen-slider__slide number-slide1"
+        src="https://www.w3schools.com/html/pic_trulli.jpg"
+        alt="Trulli"
+        width="500"
+        height="333"
+      />
+      <img
+        class="keen-slider__slide number-slide2"
+        src="https://www.w3schools.com/html/img_girl.jpg"
+        alt="Trulli"
+        width="500"
+        height="333"
+      />
+      <img
+        class="keen-slider__slide number-slide3"
+        src="https://www.w3schools.com/html/img_chania.jpg"
+        alt="Trulli"
+        width="500"
+        height="333"
+      />
+      <img
+        class="keen-slider__slide number-slide4"
+        src="https://cdn.pixabay.com/photo/2015/09/09/16/05/forest-931706__340.jpg"
+        alt="Trulli"
+        width="500"
+        height="333"
+      />
+      <img
+        class="keen-slider__slide number-slide5"
+        src="https://cdn.pixabay.com/photo/2015/03/26/09/47/sky-690293__340.jpg"
+        alt="Trulli"
+        width="500"
+        height="333"
+      />
+      <img
+        class="keen-slider__slide number-slide6"
+        src="https://cdn.pixabay.com/photo/2015/11/04/20/59/milky-way-1023340__340.jpg"
+        alt="Trulli"
+        width="500"
+        height="333"
+      />
     </div>
     <div style="margin-top: 30px; text-align: center;">
       <a
@@ -126,13 +162,13 @@
         breakpoints: {
           "(min-width: 768px)": {
             slidesPerView: 2,
-            mode: "free-snap"
+            mode: "free-snap",
           },
           "(min-width: 1200px)": {
             slidesPerView: 3,
-            mode: "free-snap"
-          }
-        }
+            mode: "free-snap",
+          },
+        },
       });
     </script>
   </body>
