--- a/slider.html
+++ b/slider.html
@@ -98,6 +98,7 @@
   </head>
 
   <body>
+      barak
     <div id="my-keen-slider" class="keen-slider">
       <img
         class="keen-slider__slide number-slide1"
